# AI-Developer-Learning-Planner

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
.github/workflows/: README.md  ci.yml
agent-service/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
agent-service/app/: config.py  main.py  observability.py
agent-service/app/api/: __init__.py  goal.py  health.py  plan.py  profile.py  progress.py  project.py  skill_gap.py
agent-service/app/schemas/: __init__.py  goal.py  plan.py  profile.py  progress.py  project.py  skill_gap.py
agent-service/app/services/: __init__.py  agent_execution.py  deepseek_chat.py  goal_decomposer.py  language.py  model_retry.py  plan_adjuster.py  plan_generator.py  profile_analyzer.py  progress_reviewer.py  project_recommender.py  prompt_catalog.py  skill_gap_analyzer.py
agent-service/app/services/cache/: redis_json_cache.py
agent-service/tests/: __init__.py  test_goal.py  test_health.py  test_model_retry.py  test_plan.py  test_profile.py  test_progress.py  test_project.py  test_prompt_catalog.py  test_schema_contracts.py  test_skill_gap.py
backend/: .dockerignore  Dockerfile  README.md  pom.xml
backend/src/main/resources/: application.yml
backend/src/test/resources/: application.yml
docs/: README.md  architecture.md
docs/archive/: AGENTS-2026-06-10.md
frontend/: Dockerfile  README.md  package-lock.json  package.json  vitest.setup.ts
frontend/src/app/: auth-status.tsx  backend-health-card.tsx  globals.css  language-switcher.tsx  layout.tsx  page.tsx  theme-toggle.tsx
frontend/src/app/agent-runs/: page.tsx
frontend/src/app/agent-runs/[runId]/: page.tsx
frontend/src/app/goals/: goal-row-actions.tsx  page.tsx
frontend/src/app/knowledge/: knowledge-workspace.tsx  page.tsx
frontend/src/app/login/: auth-form.tsx  page.tsx
frontend/src/app/plans/: page.tsx  plan-row-actions.tsx
frontend/src/app/profile/: page.tsx  profile-workspace.tsx
frontend/src/lib/: auth.ts  backend-agent-runs.ts  backend-auth.ts  backend-goals.ts  backend-knowledge.ts  backend-plans.ts  backend-profile.ts  backend-progress.ts  backend-url.ts  client-jobs.ts  goals.ts  i18n-server.ts  i18n.ts  knowledge.ts
infra/: README.md  docker-compose.yml
knowledge-base-flow/: knowledge-base-flow.html
(+283 files in other folders)
