[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-developer-learning-planner-agent-service"
version = "0.1.0"
description = "FastAPI agent service for AI Developer Learning Planner."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "pydantic==2.10.0",
    "uvicorn[standard]==0.34.0",
]

[project.optional-dependencies]
dev = [
    "httpx==0.28.0",
    "pytest==8.3.0",
    "ruff==0.9.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
