[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-developer-learning-planner-agent-service"
version = "0.1.0"
description = "FastAPI agent service for AI Developer Learning Planner."
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.136.3",
    "httpx==0.28.1",
    "pydantic==2.13.4",
    "uvicorn[standard]==0.49.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "ruff==0.15.16",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
